--- a/index.html
+++ b/index.html
@@ -188,13 +188,13 @@
   var wizardSpeed = 3;
   var wizardWidth = 70;
   var getWizardHeight = function () {
-    return 1.337 * wizardWidth
+    return 1.337 * wizardWidth;
   };
   var getWizardX = function (width) {
-    return width / 100 * 50 - wizardWidth / 2
+    return width / 2 - wizardWidth / 2;
   };
   var getWizardY = function (height) {
-    return height / 3 * 2
+    return height / 3 * 2;
   };
 
 </script>
