--- a/index.html
+++ b/index.html
@@ -194,10 +194,11 @@
     return width / 2 - wizardWidth / 2;
   };
   var getWizardY = function (height) {
-    return height / 3 * 2;
+    return height / 3;
   };
 
 </script>
+<script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
 </body>
