--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <label>
           <input type="text" name="username"
                  maxlength="25" required
-                 class="setup-user-name" value="Синий Пендальф"/>
+                 class="setup-user-name" minlength="2" maxlength="25" value="Синий Пендальф"/>
         </label>
       </div>
 
