--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
 
 </script>
 <script src="js/util.js"></script>
+<script src="js/backend.js"></script>
 <script src="js/colorize.js"></script>
 <script src="js/dialog.js"></script>
 <script src="js/wizard.js"></script>
